--- a/styles.css
+++ b/styles.css
@@ -263,6 +263,7 @@ body {
     width: 1520px;
     height: 600px;
     display: flex;
+    justify-content: space-around;
 }
 
 
@@ -275,7 +276,6 @@ body {
     width: 525px;
     height: 450px;
     margin-top: 75px;
-    margin-left: 145px;
 }
 
 .project-card a {
@@ -351,6 +351,178 @@ body {
 .project-container iframe {
     margin-left: 250px;
 }
+
+/* UI Designs Section */
+
+.ui-section {
+    background: linear-gradient(
+        145deg,
+        black 0%,
+        black 18%,
+        rgba(21, 255, 251) 18%,
+        rgba(21, 255, 251) 100%
+    );
+
+    width: 80%;
+    height: 800px;
+    margin: 0 auto;
+    margin-top: 70px;
+}
+
+.ui-title h2 {
+    color: white;
+    font-size: 50px;
+    margin-left: 50px;
+}
+
+.ui-title p {
+    color: white;
+    font-size: 30px;
+    margin-left: 75px;
+}
+
+.ui-title h3 {
+    font-size: 30px;
+    text-align: center;
+}
+
+.ui-title h4 {
+    font-size: 26px;
+    text-align: center;
+}
+
+.ui-design1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: -20px;
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: black;
+    box-shadow: 8px 5px 20px black;
+    width: 900px;
+    height: 610px;
+    margin-left: 311px;
+}
+
+.ui-design1 a {
+    display: none;
+    text-decoration: none;
+    color: white;
+    font-size: 35px;
+    background-color: transparent;
+    position: absolute;
+    margin-top: 225px;
+    z-index: 5;
+}
+
+.ui-design1:hover a {
+    display: block;
+    cursor: pointer;
+}
+
+.ui-design1 img {
+    width: 900px;
+    height: 480px;
+    border-radius: 10px;
+    filter: blur(0);
+    transition: 0.5s ease-in-out;
+}
+
+.ui-design1:hover img {
+    filter: blur(2px);
+    opacity: calc(60%);
+    transition: 0.5s ease-in-out;
+}
+
+.ui-design1 h3 {
+    color: white;
+    font-size: 26px;
+    margin-top: 20px;
+}
+
+.ui-design1 p {
+    color: white;
+    margin-top: 10px;
+    font-size: 20px;
+    text-align: center;
+}
+
+
+/* Individual UI Designs */
+
+.ui-design-container {
+    width: 80%;
+    height: 800px;
+    margin: 0 auto;
+    margin-top: 70px;
+}
+
+.ui-design-container img {
+    width: 1537px;
+    height: 800px;
+}
+
+.ui-container2 {
+    display: flex;
+    justify-content: space-around;
+}
+
+.ui-design2 {
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: black;
+    box-shadow: 8px 5px 20px black;
+    width: 525px;
+    height: 450px;
+    margin-top: 60px;
+}
+
+.ui-design2 img {
+    width: 525px;
+    height: 285px;
+    border-radius: 10px;
+    filter: blur(0);
+    transition: 0.5s ease-in-out;
+}
+
+.ui-design2:hover img {
+    filter: blur(2px);
+    opacity: calc(30%);
+    transition: 0.5s ease-in-out;
+}
+
+.ui-design2 a {
+    display: none;
+    text-decoration: none;
+    color: white;
+    font-size: 35px;
+    background-color: transparent;
+    position: absolute;
+    margin-left: 187px;
+    margin-top: 120px;
+    z-index: 5;
+}
+
+.ui-design2:hover a {
+    display: block;
+    cursor: pointer;
+}
+
+.ui-design2 h3 {
+    margin-top: 10px;
+    font-size: 22px;
+    text-align: center;
+    color: white;
+}
+
+.ui-design2 p {
+    text-align: center;
+    margin-top: 8px;
+    color: white;
+}
+
+
 
 
 /* Contact Section */
