--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ body {
     padding: 30px 30px;
     font-size: 35px;
     text-decoration: none;
-    color: rgba(21, 255, 251, 0.90);
+    color: rgb(255, 190, 190);
 }
 
 .navbar button {
@@ -49,7 +49,7 @@ body {
 }
 
 .navbar button a {
-    color:rgba(21, 255, 251, 0.90);
+    color: rgb(255, 190, 190);
 }
 
 .name {
@@ -71,8 +71,8 @@ body {
         45deg,
         black 0%,
         black 60.5%,
-        rgba(21, 255, 251) 60.5%,
-        rgba(21, 255, 251) 100%
+        rgb(239, 184, 184) 60.5%,
+        rgba(184, 38, 38, 0.845) 100%
     );
 
     width: 80%;
@@ -85,7 +85,7 @@ body {
     font-size: 65px;
     margin-top: 0px;
     margin-bottom: 30px;
-    color: rgba(0, 255, 251, 0.946);
+    color: rgba(197, 193, 193, 0.946);
 }
 
 .title-paragraph {
@@ -97,9 +97,9 @@ body {
 .professional-picture {
     margin-top: -55px;
     border-radius: 12%;
-    width: 350px;
+    width: 329px;
     height: 450px;
-    box-shadow: 5px 8px 75px rgba(21, 255, 251, 0.60);
+    box-shadow: -2px 5px 10px rgba(184, 38, 38, 0.591);
 }
 
 .title-section {
@@ -120,7 +120,7 @@ body {
 .title-buttons .fa {
     font-size: 32px;
     text-decoration: none;
-    color: rgba(21, 255, 251, 0.90);
+    color: rgb(255, 190, 190);
     padding-right: 35px;
 }
 
@@ -134,7 +134,7 @@ body {
     font-size: 18px;
     border: 1px solid transparent;
     border-radius: 15px;
-    background-color:rgba(21, 255, 251, 0.7);
+    background-color: rgb(255, 190, 190);
 }
 
 .button-contact {
@@ -156,8 +156,8 @@ body {
 .about-section {
     background: linear-gradient(
         135deg,
-        rgba(21, 255, 251) 0%,
-        rgba(21, 255, 251) 60.5%,
+        rgb(239, 184, 184) 0%,
+        rgba(184, 38, 38, 0.845) 60.5%,
         black 60.5%,
         black 100%
     );
@@ -166,6 +166,7 @@ body {
     height: 800px;
     margin: 0 auto;
     margin-top: 70px;
+    position: relative;
 }
 
 .about-container h2 {
@@ -177,7 +178,6 @@ body {
 }
 
 .about-paragraph strong {
-    background-color: black;
     color: white;
     letter-spacing: 0.15em;
 }
@@ -216,11 +216,17 @@ body {
     justify-content: space-between;
 }
 
+.coding-picture {
+    position: absolute;
+    top: 55%;
+    bottom: 0;
+    left: 75%;
+    right: 0;
+}
+
 .coding-picture img {
     width: 300px;
     height: 300px;
-    margin-top: -150px;
-    margin-right: 125px;
 }
 
 
@@ -229,8 +235,8 @@ body {
 .projects-section {
     background: linear-gradient(
         35deg,
-        rgba(21, 255, 251) 0%,
-        rgba(21, 255, 251) 80%,
+        rgb(239, 184, 184) 0%,
+        rgba(184, 38, 38, 0.845) 80%,
         black 80%,
         black 100%
     );
@@ -263,7 +269,8 @@ body {
     width: 1520px;
     height: 600px;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 120px;
 }
 
 
@@ -323,34 +330,8 @@ body {
 }
 
 
-/* Individual Projects */
 
-.project-container {
-    background: linear-gradient(
-        45deg,
-        black 0%,
-        black 60.5%,
-        rgba(21, 255, 251) 60.5%,
-        rgba(21, 255, 251) 100%
-    );
 
-    width: 80%;
-    height: 800px;
-    margin: 0 auto;
-    margin-top: 70px;
-}
-
-.project-container h2 {
-    color: white;
-    font-size: 50px;
-    padding-top: 20px;
-    margin-left: 50px;
-    margin-bottom: 20px;
-}
-
-.project-container iframe {
-    margin-left: 250px;
-}
 
 /* UI Designs Section */
 
@@ -359,8 +340,8 @@ body {
         145deg,
         black 0%,
         black 18%,
-        rgba(21, 255, 251) 18%,
-        rgba(21, 255, 251) 100%
+        rgba(184, 38, 38, 0.845) 18%,
+        rgb(239, 184, 184) 100%
     );
 
     width: 80%;
@@ -465,7 +446,8 @@ body {
 
 .ui-container2 {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 120px;
 }
 
 .ui-design2 {
@@ -530,8 +512,8 @@ body {
 .contact-section {
     background: linear-gradient(
         135deg,
-        rgba(21, 255, 251) 0%,
-        rgba(21, 255, 251) 60.5%,
+        rgb(239, 184, 184) 0%,
+        rgba(184, 38, 38, 0.845) 60.5%,
         black 60.5%,
         black 100%
     );
@@ -541,6 +523,7 @@ body {
     margin: 0 auto;
     margin-top: 70px;
     margin-bottom: 100px;
+    position: relative;
 }
 
 .contact-title h2 {
@@ -578,6 +561,7 @@ body {
 .contact-container h4 {
     font-size: 18px;
     font-weight: 500;
+    margin-bottom: 10px;
 }
 
 .radio-reasons {
@@ -588,7 +572,9 @@ body {
 .contact-container textarea {
     border-radius: 7px;
     font-family: 'Kanit', sans-serif;
-    font-size: 14px;
+    font-size: 16px;
+    padding: 5px;
+    margin-bottom: 10px;
 }
 
 .button-container {
@@ -598,19 +584,40 @@ body {
 
 .button-container .submit {
     font-size: 20px;
-    background-color:rgba(0, 255, 251, 0.946);
+    background-color: rgb(255, 190, 190);
+}
+
+.coding-picture2 {
+    position: absolute;
+    top: 55%;
+    bottom: 0;
+    left: 75%;
+    right: 0;
 }
 
 .coding-picture2 img {
     width: 300px;
     height: 300px;
-    float: right;
-    margin-top: -375px;
-    margin-right: 125px;
 }
 
 
 /* Success Page */
+
+.success-section {
+    background: linear-gradient(
+        135deg,
+        rgb(239, 184, 184) 0%,
+        rgba(184, 38, 38, 0.845) 60.5%,
+        black 60.5%,
+        black 100%
+    );
+
+    width: 80%;
+    height: 800px;
+    margin: 0 auto;
+    margin-top: 70px;
+    margin-bottom: 100px;
+}
 
 .success-text {
     width: 462px;
@@ -622,9 +629,11 @@ body {
 }
 
 .success-logo {
-    display: flex;
-    margin-left: 305px;
-    margin-top: -450px;
+    position: absolute;
+    top: 45%;
+    bottom: 0;
+    left: 70%;
+    right: 0;
 }
 
 .success-logo img {
