--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
 
 .navbar {
     text-align: center;
-    margin-right: 210px;
+    margin-right: 410px;
 }
 
 .navbar a {
@@ -365,6 +365,8 @@ body {
 .ui-title h3 {
     font-size: 30px;
     text-align: center;
+    color:rgb(255, 255, 255);
+    margin-bottom: 4px;
 }
 
 .ui-title h4 {
